# win_api_rs

./: Cargo.toml  README.en.md  README.md
src/: main.rs  memory.rs
src/macros/: mod.rs  size.rs  string.rs
src/make_dll/: Cargo.toml
src/make_dll/src/: lib.rs  power.rs
src/memory_api/: mod.rs  read_memory_api.rs  window_api.rs
src/struct_file/: student.rs
src/trait_file/: mod.rs  show_me.rs
src/util/: mod.rs  student_util.rs
src/utils/: mod.rs  string_utils.rs  vec_utils.rs
src/windows_api_template/: init_api.rs  mod.rs  read_memory_api.rs  write_memory_api.rs
src/windows_kernel_mod/: Cargo.toml
src/windows_kernel_mod/src/: lib.rs
