[package]
name = "win_api_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser",
    "memoryapi",
    "minwindef",
    "processthreadsapi",
    "ntdef",
    "basetsd",
    "tlhelp32",
    "winnt",
    "winerror",
    "handleapi"] }